<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.senac.nutrition.MainActivity"
    android:orientation="vertical" android:padding="24dp">

    <TextView
        android:id="@+id/lbPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbPeso" />

    <EditText
        android:id="@+id/edPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPeso"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/lbAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbAltura" />

    <EditText
        android:id="@+id/edAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintAltura"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/lbSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbSexo" />

    <RadioGroup
        android:id="@+id/rdGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/rbMasculino">

        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbMasculino"
            android:layout_marginLeft="10dp" />

        <RadioButton
            android:id="@+id/rbFeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbFeminino"
            android:layout_marginLeft="10dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:text="@string/btCalcular"/>

</androidx.appcompat.widget.LinearLayoutCompat>